<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBeg"
    android:orientation="vertical"
    tools:context="com.maltseva.marta.sing.ChooseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"


        />
    <Button
        android:id="@+id/basic_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/basic"
        android:textSize="30sp"
        android:textStyle="italic"
        android:background="@color/colorBir"

        />
    <Button
        android:id="@+id/medium_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/med"
        android:textSize="30sp"
        android:textStyle="italic"
        android:background="@color/colorBir"
        />
    <Button
        android:id="@+id/adv_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/adv"
        android:textSize="30sp"
        android:textStyle="italic"
        android:background="@color/colorBir"
        />

</LinearLayout>
