<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorBeg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/a_mus_1"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:paddingRight="100dp"
            />

        <Button
            android:id="@+id/play1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="10"
            android:background="@drawable/button_black_play"
            android:paddingTop="25dp" />

        <Button
            android:id="@+id/stop1"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:background="@drawable/button_black_stop" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/a_mus_2"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:paddingRight="60dp"
            />

        <Button
            android:id="@+id/play2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="10"
            android:background="@drawable/button_black_play"
            android:paddingTop="25dp" />

        <Button
            android:id="@+id/stop2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:background="@drawable/button_black_stop" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/a_mus_3"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:paddingRight="94dp"
            />

        <Button
            android:id="@+id/play3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="10"
            android:background="@drawable/button_black_play"
            android:paddingTop="25dp" />

        <Button
            android:id="@+id/stop3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:background="@drawable/button_black_stop" />

    </LinearLayout>


</LinearLayout>